Fix footer overlap, menu & hero z-index

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,8 +1,3 @@
-.page {
-  &__footer {
-  }
-}
-
 .footer {
   border-top-left-radius: $b-radius;
   border-top-right-radius: $b-radius;
