--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
   position: relative;
+  z-index: 2;
   padding: 50px 0 70px;
   min-height: 600px;
   color: $color-white;
@@ -16,10 +17,11 @@
 
   &__wrapper {
     position: relative;
-    z-index: 1;
+    z-index: 3;
     margin-bottom: 50px;
     display: grid;
     max-width: 730px;
+    user-select: none;
 
     @media (max-width: $media-tablet) {
       max-width: 600px;
@@ -69,6 +71,7 @@
     top: 0;
 
     @media (max-width: $media-medium) {
+      z-index: 2;
       position: relative;
     }
   }
