--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -9,7 +9,7 @@
     &::after {
       content: "";
       display: block;
-      z-index: -99;
+      z-index: 1;
       position: absolute;
       left: 0;
       top: 0;
@@ -21,9 +21,15 @@
     }
 
     &--active::after {
-      z-index: 0;
+      z-index: 2;
 
       opacity: 1;
     }
+  }
+
+  &__footer {
+    position: relative;
+    z-index: 1;
+    margin-top: -20px;
   }
 }
